# cite_verify_cli

./: INSTALL.md  README.md  SCRIPTS_SUMMARY.md  SETUP.md  pyproject.toml
citeverify/: __init__.py  cache.py  cli.py  downloader.py  extractor.py  formatter.py  models.py  scorer.py  utils.py  verifier.py
tests/: __init__.py  conftest.py  test_downloader.py  test_extractor.py  test_utils.py  test_verifier.py
tests/fixtures/: .gitkeep
